--- a/index.html
+++ b/index.html
@@ -1,76 +1,163 @@
-<!doctype html>
-<html class="no-js" lang="">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-   <meta charset="utf-8">
-   <title>Video Popup plugin</title>
-   <meta name="description" content="">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+   <title>Video popup ui</title>
    <!-- Favicons -->
    <link rel="apple-touch-icon" href="asset/img/favicons/apple-touch-icon.png" sizes="180x180">
    <link rel="icon" href="asset/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
    <link rel="icon" href="asset/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-   <link rel="stylesheet" href="asset/css/bootstrap.min.css">
-   <link href="//vjs.zencdn.net/4.11/video-js.css" rel="stylesheet">
    <link rel="stylesheet" href="asset/css/fontawsome.css">
+   <link rel="stylesheet" href="asset/css/bootstrap.min.css">
    <link rel="stylesheet" href="asset/css/style.css">
    <link rel="stylesheet" href="asset/css/responsive.css">
-   <!-- this is for mordanizar js link -->
-   <script src="asset/js/vendor/modernizr-3.6.0.min.js"></script>
 </head>
 
 <body>
-   <section id="main_video_area">
-      <div class="container-fluid">
+   <section id="video_pop_main_box">
+      <div class="container">
          <div class="row">
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
-               <div class="video_item">
-                  <div class="video_frame_main">
-                     <video class="vido_frame" src="asset/video/1.mp4"></video>
-                     <div class="video_poster">
+            <div class="col-xl-4 col-lg-4 col-md-4">
+               <div class="item_video">
+                  <div class="movie_main_box">
+                     <div class="movie_poster">
                         <img src="asset/img/1.webp" alt="">
                      </div>
-                  </div>
-               </div>
-            </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
-               <div class="video_item">
-                  <div class="video_frame_main">
-                     <video class="vido_frame" src="asset/video/2.mkv"></video>
-                     <div class="video_poster">
-                        <img src="asset/img/2.webp" alt="">
+                     <div class="video_frame">
+                        <video src="asset/video/1.mp4"></video>
                      </div>
                   </div>
-               </div>
+                  <div class="movie_information_area">
+                     <div class="top_link">
+                        <div class="left_link">
+                           <ul>
+                              <li class="play_btn"><a href="#"><i class="fa fa-play"></i></a></li>
+                              <li><a href="#"><i class="fa fa-plus"></i></a></li>
+                              <li><a href="#"><i class="fal fa-thumbs-up"></i></a></li>
+                              <li><a href="#"><i class="fal fa-thumbs-down"></i></a></li>
+                           </ul>
+                        </div>
+                        <div class="right_link text-right">
+                           <a href="#">
+                              <i class="fal fa-angle-down"></i>
+                           </a>
+                        </div>
+                     </div>
+                     <div class="movie_retting">
+                        <div class="match">
+                           <h4>98% Match</h4>
+                        </div>
+                        <div class="info">
+                           <h4><span>13+</span> 5 Seassons</h4>
+                        </div>
+                     </div>
+                     <div class="movie_geners">
+                        <ul>
+                           <li>Rousing <span>.</span></li>
+                           <li>Slick <span>.</span></li>
+                           <li>Exciting</li>
+                        </ul>
+                     </div>
+                  </div>
+                </div>
             </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
-               <div class="video_item">
-                  <div class="video_frame_main">
-                     <video class="vido_frame" src="asset/video/1.mp4"></video>
-                     <div class="video_poster">
+            <div class="col-xl-4 col-lg-4 col-md-4">
+               <div class="item_video">
+                  <div class="movie_main_box">
+                     <div class="movie_poster">
+                        <img src="asset/img/2.webp" alt="">
+                     </div>
+                     <div class="video_frame">
+                        <video src="asset/video/2.mkv" preload="none"></video>
+                     </div>
+                  </div>
+                  <div class="movie_information_area">
+                     <div class="top_link">
+                        <div class="left_link">
+                           <ul>
+                              <li class="play_btn"><a href="#"><i class="fa fa-play"></i></a></li>
+                              <li><a href="#"><i class="fa fa-plus"></i></a></li>
+                              <li><a href="#"><i class="fal fa-thumbs-up"></i></a></li>
+                              <li><a href="#"><i class="fal fa-thumbs-down"></i></a></li>
+                           </ul>
+                        </div>
+                        <div class="right_link text-right">
+                           <a href="#">
+                              <i class="fal fa-angle-down"></i>
+                           </a>
+                        </div>
+                     </div>
+                     <div class="movie_retting">
+                        <div class="match">
+                           <h4>98% Match</h4>
+                        </div>
+                        <div class="info">
+                           <h4><span>13+</span> 5 Seassons</h4>
+                        </div>
+                     </div>
+                     <div class="movie_geners">
+                        <ul>
+                           <li>Rousing <span>.</span></li>
+                           <li>Slick <span>.</span></li>
+                           <li>Exciting</li>
+                        </ul>
+                     </div>
+                  </div>
+                </div>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-4">
+               <div class="item_video">
+                  <div class="movie_main_box">
+                     <div class="movie_poster">
                         <img src="asset/img/3.jpg" alt="">
                      </div>
-                  </div>
-               </div>
-            </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
-               <div class="video_item">
-                  <div class="video_frame_main">
-                     <video class="vido_frame" src="asset/video/2.mkv"></video>
-                     <div class="video_poster">
-                        <img src="asset/img/2.webp" alt="">
+                     <div class="video_frame">
+                        <video src="asset/video/1.mp4"></video>
                      </div>
                   </div>
-               </div>
+                  <div class="movie_information_area">
+                     <div class="top_link">
+                        <div class="left_link">
+                           <ul>
+                              <li class="play_btn"><a href="#"><i class="fa fa-play"></i></a></li>
+                              <li><a href="#"><i class="fa fa-plus"></i></a></li>
+                              <li><a href="#"><i class="fal fa-thumbs-up"></i></a></li>
+                              <li><a href="#"><i class="fal fa-thumbs-down"></i></a></li>
+                           </ul>
+                        </div>
+                        <div class="right_link text-right">
+                           <a href="#">
+                              <i class="fal fa-angle-down"></i>
+                           </a>
+                        </div>
+                     </div>
+                     <div class="movie_retting">
+                        <div class="match">
+                           <h4>98% Match</h4>
+                        </div>
+                        <div class="info">
+                           <h4><span>13+</span> 5 Seassons</h4>
+                        </div>
+                     </div>
+                     <div class="movie_geners">
+                        <ul>
+                           <li>Rousing <span>.</span></li>
+                           <li>Slick <span>.</span></li>
+                           <li>Exciting</li>
+                        </ul>
+                     </div>
+                  </div>
+                </div>
             </div>
          </div>
       </div>
    </section>
-
-   <!-- all javascript load here -->
    <script src="asset/js/vendor/jquery-3.3.1.min.js"></script>
    <script src="asset/js/custom.js"></script>
+   
 </body>
 
 </html>
